--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@babel/preset-react": "^7.9.1",
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
+    "chalk": "^4.1.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "nodemon": "^2.0.4",
     "pg": "^7.18.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
