--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg": "^7.18.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-logger": "^1.1.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
@@ -30,5 +31,8 @@
     "sequelize": "^5.21.5",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.10.4"
   }
 }
